[package]
name = "PT"
version = "1.0.0"

[dependencies]
cpal = "0.15"
claxon = { version = "0.4.2", optional = true }
hound = { version = "3.3.1", optional = true }
lewton = { version = "0.10", optional = true }
minimp3_fixed = { version = "0.5.4", optional = true}
symphonia = { version = "0.5.2", optional = true, default-features = false }
crossbeam-channel = { version = "0.5.8", optional = true }
raylib = "3.7.0"
threadpool = "1.8.1"
rodio = "0.17.3"
libc = "0.2.153"
